Made the first prototype of the dice game with no resets or perma upgrades

--- a/html/css/website.css
+++ b/html/css/website.css
@@ -95,3 +95,13 @@ th {
 input[type="number"] {
     width: 45px;
 }
+
+.grayed:hover {
+	color: gray;
+	background-color: black;
+}
+
+.grayed {
+	color: gray;
+	border-color: grey;
+}
