--- a/html/css/website.css
+++ b/html/css/website.css
@@ -83,28 +83,53 @@ td, th {
 th {
     text-decoration-thickness: 10px;
 }
+
 input[type="number"] {
     width: 45px;
 }
 
 .grayed:hover {
-	color: gray;
-	background-color: black;
+    color: gray;
+    background-color: black;
 }
 
 .grayed {
-	color: gray;
-	border-color: grey;
+    color: gray;
+    border-color: grey;
 }
 
 .column2 {
     float: left;
     width: 50%;
 }
+
 .red:hover {
-	background-color: red;
+    background-color: red;
 }
+
 .red {
-	color: red;
-	border-color: red;
+    color: red;
+    border-color: red;
+}
+
+.popup {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.popup-content {
+    background-color: black;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid green;
+    margin-left: 220px;
+    margin-right: 40px;
 }
