--- a/html/css/website.css
+++ b/html/css/website.css
@@ -5,7 +5,8 @@ body {
 }
 
 .main {
-    margin-left: clamp(150px, 25%, 260px);
+    margin-left: clamp(150px, 25%, 250px);
+    margin-right: 10px;
 }
 
 a {
