Added way to send emails through sendgrid

--- a/html/css/website.css
+++ b/html/css/website.css
@@ -143,5 +143,11 @@ input[type="number"] {
 
 .center {
     display:flex;
-   justify-content:center;
+    justify-content:center;
+}
+
+textarea {
+    background-color: black;
+    color: white;
+    border-radius: 4px;
 }
