--- a/html/klumpy/index.css
+++ b/html/klumpy/index.css
@@ -2,52 +2,52 @@
   background-color: white;
   color: black;
 } */
-table,
-th,
-td {
+.game table,
+.game th,
+.game td {
   background-color: white;
   color: black;
   border: 10px solid black;
 }
 
-td {
-  height: 150px;
-  width: 150px;
+.game td {
+  height: 100px;
+  width: 100px;
   padding: 0px;
   vertical-align: center;
   text-align: center;
-  font-size: 100px;
+  font-size: 80px;
 }
 
-.leaderboard th,
+/* .leaderboard th,
 .leaderboard td {
   background-color: black;
   color: white;
   font-size: 20px;
   height: auto;
   width: auto;
-}
+} */
 
-.red-td {
+.game .red-td {
   background-color: rgb(255, 54, 54);
 }
 
-.green-td {
+.game .green-td {
   background-color: rgb(21, 164, 21);
 }
 
-.blue-td {
+.game .blue-td {
   background-color: rgb(36, 142, 255);
 }
 
-.yellow-td {
+.game .yellow-td {
   background-color: rgb(255, 255, 0);
 }
 
-.brown-td {
+.game .brown-td {
   background-color: rgb(165, 118, 42);
 }
-.highlight-td {
+.game .highlight-td {
   outline-style: solid;
   outline-width: 9px;
   outline-color: rgb(0, 242, 255);
